Extract core module and migrate to JUnit 5 (#23)
* Remove Spark support, upgrade dependencies and build with Java 21

* Introduce new core module with no junit dependencies

* Introduce new Tablasco class for running tablasco outside of JUnit

* Target Java 11 and update tests to use Java 21

* Use spotless plugin to enforce code formatting

* Remove unused code

* Junit 4 to 5 OpenRewrite output

* Fixed tests and removed JUnit 4 dependency

* Rename module to tablasco-extension

* More strict extension validation and hide Description class

* Replace HTML comparison with snapshot tests

* Make TableVerifier a JUnit 5 extension

* Fix warnings from IDE

* Fix Java version compatibility issue and reduce rebase logging

* Clean up inspections

* Revert changes to ListVerifiableTable and introduce Tables factory

* Use core Tablasco class from TableVerifier extension

* Update HTML using AI-generated CSS

* Fix ResultCell equals method

* Resolve some inspections reported by IntelliJ

* Consolidate HtmlTest and fix TablascoTest

* Revert module name to tablasco-junit for easier integration

* Capture full HTML in snapshot tests

* Simplify HTML generation with a base template resource

* Add color-code legend at bottom of HTML

* Fix legend layout and styling

* Update README for JUnit 5

* Use default project version and use mvn versions:set going forward